# scim-sinhala

./: AUTHORS  ChangeLog  Makefile.in  NEWS  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in
m4/: Makefile.in
po/: Makevars  POTFILES.in  ja.gmo  ja.po  scim-canna.pot
src/: Makefile.am  Makefile.in  imsinhala-t.c  scim_sinhala_action.cpp  scim_sinhala_action.h  scim_sinhala_imengine.cpp  scim_sinhala_imengine.h  scim_sinhala_imengine_factory.cpp
